working auth and many to many relationships with extended user profile

--- a/mob_tracker/templates/layout.html
+++ b/mob_tracker/templates/layout.html
@@ -34,7 +34,7 @@
 	</div>
 	<footer>
 		<div class="container center-align">
-			<a href="/admin">Login</a>
+			<a href="/admin">Admin</a>
 		</div>
 	</footer>
 </body>
