--- a/mob_tracker/templates/index.html
+++ b/mob_tracker/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h3 class="center-align">This is the index</h3>
+<h3 class="center-align mt50">Search for entries</h3>
+<div class="row">
+	<div class="input-field col s12 mt30">
+		<input id="search" type="text" class="validate">
+	</div>
+</div>
 
 {% endblock %}
