--- a/mob_tracker/templates/signup.html
+++ b/mob_tracker/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1>Login</h1>
+<h1>Signup</h1>
 <form method="POST" action=".">
 	{% csrf_token %}
 	{{ form.as_p}}
