--- a/mob_tracker/templates/index.html
+++ b/mob_tracker/templates/index.html
@@ -1,11 +1,42 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h3 class="center-align mt50">Search for entries</h3>
-<div class="row">
-	<div class="input-field col s12 mt30">
-		<input id="search" type="text" class="validate">
+<h3 class="center-align mt50">What would you like to do?</h3>
+<form method="POST" action=".">
+	{% csrf_token %}
+	<div class="row">
+		<div class="input-field col s12">
+			<input id="search" type="text" class="validate" name="query">
+		</div>
 	</div>
-</div>
+	<div class="row">
+		<div class="input-field col s12 mt0 center-align">
+			<input class="btn" type="submit" value="Submit"></input>
+		</div>
+	</div>
+</form>
+
+<!-- <div class="conainer center-align">
+	<div id="pieChart" class="chart"></div>
+</div> -->
+
+{% if query %}
+	<p>{{ query }}</p>
+{% endif %}
+
+{% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ field.name }}: {{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>Non-field: {{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
 
 {% endblock %}
