--- a/mob_tracker/templates/layout.html
+++ b/mob_tracker/templates/layout.html
@@ -6,6 +6,7 @@
 	<title>Mob</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
 	<link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{% static 'helpers.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
@@ -43,5 +44,11 @@
 			<a href="/admin">Admin</a>
 		</div>
 	</footer>
+	<script
+	  src="https://code.jquery.com/jquery-3.3.1.js"
+	  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+	  crossorigin="anonymous"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+	<script src="{% static 'pie.js' %}"></script>
 </body>
 </html>
