--- a/mob_tracker/templates/profile.html
+++ b/mob_tracker/templates/profile.html
@@ -1,20 +1,33 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1>Profile</h1>
 <h3>Welcome, {{ profile.user }}!</h3>
 
 {% if entries %}
 	{% for entry in entries %}
-		<h4>{{entry.title}}</h4>
-		<ul>
-			<li>Category: {{entry.category}}</li>
-			<li>Subcategory: {{entry.subcategory}}</li>
-			<li>Description: {{entry.description}}</li>
-			<li>Date added: {{entry.add_date}}</li>
-			<li>Contributors:</li>
-
-		</ul>
+		<div class="row">
+			<div class="col s12 m6">
+				<div class="card blue-grey darken-1">
+					<div class="card-content white-text">
+						<span class="card-title">{{entry.title}}</span>
+						<p>Category: {{entry.category}}</p>
+						<hr>
+						<p>Subcategory: {{entry.subcategory}}</p>
+						<hr>
+						<p>Description: {{entry.description}}</p>
+						<hr>
+						<p>Date added: {{entry.add_date}}</p>
+						<hr>
+					</div>
+					<div class="card-action">
+						<p>Contributors:</p>
+						{% for contributor in entry.contributors %}
+							<a href="{% url 'profile' contributor %}">{{ contributor }}</a>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+		</div>
 	{% endfor %}
 {% endif %}
 
