style changes and route fixes

--- a/mob_tracker/templates/entry.html
+++ b/mob_tracker/templates/entry.html
@@ -8,11 +8,21 @@
 		</div> -->
 		<div class="card-content">
 			<span class="card-title activator grey-text text-darken-4">{{entry.title}}<i class="material-icons right">more_vert</i></span>
-			<p><a href="#">This is a link</a></p>
+			<p class="black-text">Category: {{entry.category}}</p>
+			<hr>
+			{% if entry.subcategory %}
+				<p class="black-text">Subcategory: {{entry.subcategory}}</p>
+				<hr>
+			{% endif %}
+			<p class="black-text">Contributors:
+			{% for contributor in contributors %}
+				<a href="{% url 'profile' contributor %}">{{ contributor }}</a>
+			{% endfor %}
+			</p>
 		</div>
 		<div class="card-reveal">
-			<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-			<p>Here is some more information about this product that is only revealed once clicked on.</p>
+			<span class="card-title grey-text text-darken-4">Date added: {{entry.add_date}}<i class="material-icons right">close</i></span>
+			<p class="black-text">Description: {{entry.description}}</p>
 		</div>
 	</div>
 {% else %}
