--- a/mob_tracker/static/style.css
+++ b/mob_tracker/static/style.css
@@ -55,3 +55,20 @@ body {
 .chart path { cursor: pointer; }
 /*Pie Chart*/
 
+html {
+  /*background-color: black;*/
+}
+body {
+  background-color: #333;
+  color: white;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: white;
+}
+.navigation-class {
+  background-color: #00e8f4;
+}
