--- a/mob_tracker/templates/layout.html
+++ b/mob_tracker/templates/layout.html
@@ -3,18 +3,20 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mob</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
 	<link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{% static 'helpers.css' %}">
+	<!-- <link rel="stylesheet" type="text/css" href="{% static 'autohide.css' %}"> -->
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
 	<header>
 		<div class="navbar-fixed">
 			<nav>
-				<div class="nav-wrapper blue">
+				<div class="nav-wrapper navigation-class">
 					<a href="/" class="brand-logo ml30">Mob</a>
 					<ul class="right hide-on-med-and-down">
 						{% if user.is_authenticated %}
@@ -48,7 +50,9 @@
 	  src="https://code.jquery.com/jquery-3.3.1.js"
 	  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
 	  crossorigin="anonymous"></script>
+	  <script>if( !window.jQuery ) document.write('<script src="js/jquery-3.0.0.min.js"><\/script>');</script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 	<script src="{% static 'pie.js' %}"></script>
+	<!-- <script src="{% static 'autohide.js' %}"></script> -->
 </body>
 </html>
