--- a/mob_tracker/templates/profile.html
+++ b/mob_tracker/templates/profile.html
@@ -1,29 +1,35 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h3>Welcome, {{ profile.user }}!</h3>
+<h5 class="contributions-class center-align">{{ profile.user }}'s contributions</h5>
 
 {% if entries %}
 	{% for entry in entries %}
 		<div class="row">
-			<div class="col s12 m6">
+			<div class="col s12 m12">
 				<div class="card blue-grey darken-1">
+					<a href="{% url 'entry' entry.title_clean %}">
 					<div class="card-content white-text">
+						
 						<span class="card-title">{{entry.title}}</span>
 						<p>Category: {{entry.category}}</p>
 						<hr>
-						<p>Subcategory: {{entry.subcategory}}</p>
+						{% if entry.subcategory %}
+							<p>Subcategory: {{entry.subcategory}}</p>
+							<hr>
+						{% endif %}
+						<p>Date added: {{entry.add_date}}</p>
 						<hr>
 						<p>Description: {{entry.description}}</p>
 						<hr>
-						<p>Date added: {{entry.add_date}}</p>
-						<hr>
 					</div>
+					</a>
 					<div class="card-action">
-						<p>Contributors:</p>
+						<p>Contributors:
 						{% for contributor in entry.contributors %}
 							<a href="{% url 'profile' contributor %}">{{ contributor }}</a>
 						{% endfor %}
+						</p>
 					</div>
 				</div>
 			</div>
