--- a/mob_tracker/static/style.css
+++ b/mob_tracker/static/style.css
@@ -1,66 +1,37 @@
-/*Pie Chart*/
+/* progress bars */
+@import "compass/css3";
+
+.progress {
+  width: 100%;
+  height: 50px;
+  color: black;
+  text-align: center;
+  margin: auto;
+}
+.progress-wrap {
+  background: #f80;
+  margin: 20px 0;
+  overflow: hidden;
+  position: relative;
+}
+.progress-bar {
+  background: #ddd;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+/* progress bars */
+
+
 @import url(//fonts.googleapis.com/css?family=Oswald:400);
 * {
   margin: 0;
   padding: 0;
 }
 body {
-  background: #ddd;
-  font-family: "Oswald", "Helvetica Newe", Helvetica, sans-serif;
-}
-.chart {
-  /*position: absolute;*/
-  width: 300px;
-  height: 300px;
-  margin: 0 auto;
-  /*top: 50%;*/
-  /*left: 50%;*/
-  /*margin: -225px 0 0 -225px;*/
-}
-.pieTip {
-  position: absolute;
-  float: left;
-  min-width: 30px;
-  max-width: 300px;
-  padding: 5px 18px 6px;
-  border-radius: 2px;
-  background: rgba(255,255,255,.97);
-  color: #444;
-  font-size: 19px;
-  text-shadow: 0 1px 0 #fff;
-  text-transform: uppercase;
-  text-align: center;
-  line-height: 1.3;
-  letter-spacing: .06em;
-  box-shadow: 0 0 3px rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.5);
-  -webkit-transform: all .3s;
-     -moz-transform: all .3s;
-      -ms-transform: all .3s;
-       -o-transform: all .3s;
-          transform: all .3s;
-  pointer-events: none;
-}
-.pieTip:after {
-      position: absolute;
-      left: 50%;
-      bottom: -6px;
-      content: "";
-      height: 0;
-      margin: 0 0 0 -6px;
-      border-right: 5px solid transparent;
-      border-left: 5px solid transparent;
-      border-top: 6px solid rgba(255,255,255,.95);
-      line-height: 0;
-}
-.chart path { cursor: pointer; }
-/*Pie Chart*/
-
-html {
-  /*background-color: black;*/
-}
-body {
   background-color: #333;
   color: white;
+  font-family: "Oswald", "Helvetica Newe", Helvetica, sans-serif;
 }
 h1,
 h2,
