--- a/mob_tracker/templates/layout.html
+++ b/mob_tracker/templates/layout.html
@@ -52,7 +52,7 @@
 	  crossorigin="anonymous"></script>
 	  <script>if( !window.jQuery ) document.write('<script src="js/jquery-3.0.0.min.js"><\/script>');</script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-	<script src="{% static 'pie.js' %}"></script>
-	<!-- <script src="{% static 'autohide.js' %}"></script> -->
+	<!-- <script src="{% static 'pie.js' %}"></script> -->
+	<script src="{% static 'app.js' %}"></script>
 </body>
 </html>
