--- a/mob_tracker/templates/index.html
+++ b/mob_tracker/templates/index.html
@@ -36,26 +36,27 @@
 
 					<div class="row">
 						<form class="col s12" method="POST" action=".">
+							{% csrf_token %}
 							<div class="row">
 								<div class="input-field col s12">
-									<input id="title" type="text" class="validate" name="title" value="{{ search }}">
-									<label for="title">Entry Title:</label>
+									<input id="title{{ forloop.counter0 }}" type="text" class="validate" name="title" placeholder="Mandatory">
+									<label for="title{{ forloop.counter0 }}">Entry Title:</label>
 								</div>
 							</div>
 							<div class="row">
 								<div class="input-field col s6">
-									<input id="category" type="text" class="validate" name="category" value="{{ keyword.text }}">
-									<label for="category">Category:</label>
+									<input id="category{{ forloop.counter0 }}" type="text" class="validate" name="category" value="{{ keyword.text }}" placeholder="Mandatory">
+									<label for="category{{ forloop.counter0 }}">Category:</label>
 								</div>
 								<div class="input-field col s6">
-									<input id="subcategory" type="text" class="validate" placeholder="Optional" name="subcategory">
-									<label for="subcategory">Subcategory:</label>
+									<input id="subcategory{{ forloop.counter0 }}" type="text" class="validate" placeholder="Optional" name="subcategory">
+									<label for="subcategory{{ forloop.counter0 }}">Subcategory:</label>
 								</div>
 							</div>
 							<div class="row">
 								<div class="input-field col s12">
-									<input id="description" type="text" class="validate" name="description">
-									<label for="description">Description:</label>
+									<input id="description{{ forloop.counter0 }}" type="text" class="validate" placeholder="Optional" name="description">
+									<label for="description{{ forloop.counter0 }}">Description:</label>
 								</div>
 							</div>
 						</form>
@@ -63,7 +64,7 @@
 				</div>
 					<div class="modal-footer">
 					<!-- <a href="#!" type="submit" class="modal-close waves-effect waves-green btn-flat">Create</a> -->
-					<input class="modal-close waves-effect waves-green btn-flat modal-submit-class" type="submit" value="Create"></input>
+					<input class="modal-close waves-effect waves-green btn-flat modal-submit-class" type="submit" value="Create" data-modal="{{ forloop.counter0 }}"></input>
 				</div>
 			</div>
 		</div>
@@ -80,11 +81,12 @@
 </div>
 
 <!-- Modal Structure -->
-			<div id="modal{{ forloop.counter0 }}" class="modal">
+			<div id="modal" class="modal">
 				<div class="modal-content black-text pb0">
 					<h4 class="black-text">I Want To...</h4>
 					<div class="row">
 						<form class="col s12" method="POST" action=".">
+							{% csrf_token %}
 							<div class="row">
 								<div class="input-field col s12">
 									<input id="title" type="text" class="validate" name="title" value="{{ search }}">
@@ -112,7 +114,7 @@
 				</div>
 					<div class="modal-footer">
 					<!-- <a href="#!" type="submit" class="modal-close waves-effect waves-green btn-flat">Create</a> -->
-					<input class="modal-close waves-effect waves-green btn-flat modal-submit-class" type="submit" value="Create"></input>
+					<input class="modal-close waves-effect waves-green btn-flat modal-submit-class" type="submit" value="Create" data-modal=""></input>
 				</div>
 			</div>
 
