--- a/mob_tracker/templates/layout.html
+++ b/mob_tracker/templates/layout.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
-	<header>
+	<header class="mb50">
 		<div class="navbar-fixed">
 			<nav>
 				<div class="nav-wrapper navigation-class">
@@ -52,6 +52,7 @@
 	  crossorigin="anonymous"></script>
 	  <script>if( !window.jQuery ) document.write('<script src="js/jquery-3.0.0.min.js"><\/script>');</script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+	  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 	<!-- <script src="{% static 'pie.js' %}"></script> -->
 	<script src="{% static 'app.js' %}"></script>
 </body>
