--- a/mob_tracker/templates/layout.html
+++ b/mob_tracker/templates/layout.html
@@ -42,9 +42,9 @@
 		{% block content %}{% endblock %}
 	</div>
 	<footer>
-		<div class="container center-align">
+<!-- 		<div class="container center-align">
 			<a href="/admin">Admin</a>
-		</div>
+		</div> -->
 	</footer>
 	<script
 	  src="https://code.jquery.com/jquery-3.3.1.js"
