last minute fixes

--- a/mob_tracker/static/style.css
+++ b/mob_tracker/static/style.css
@@ -15,7 +15,7 @@
   position: relative;
 }
 .progress-bar {
-  background: #333;
+  background: white;
   left: 0;
   position: absolute;
   top: 0;
