--- a/mob_tracker/templates/index.html
+++ b/mob_tracker/templates/index.html
@@ -39,7 +39,7 @@
 							{% csrf_token %}
 							<div class="row">
 								<div class="input-field col s12">
-									<input id="title{{ forloop.counter0 }}" type="text" class="validate" name="title" placeholder="Mandatory">
+									<input id="title{{ forloop.counter0 }}" type="text" class="validate" name="title" placeholder="Mandatory" value="{{search}}">
 									<label for="title{{ forloop.counter0 }}">Entry Title:</label>
 								</div>
 							</div>
@@ -117,6 +117,27 @@
 					<input class="modal-close waves-effect waves-green btn-flat modal-submit-class" type="submit" value="Create" data-modal=""></input>
 				</div>
 			</div>
+
+{% if entries %}
+	<div class="row">
+		{% for entry in entries %}
+			<div class="col s12 m6">
+				<div class="card">
+					<a href="{% url 'entry' entry.title_clean %}">
+					<div class="card-content entry-class">
+						<span class="card-title grey-text text-darken-4">{{entry.title}}</span>
+						<p class="black-text">Category: {{entry.category}}</p>
+						<hr>
+						<p class="black-text">Date Added: {{entry.add_date}}</p>
+						<hr>
+						<p class="black-text">Description: {{entry.description}}</p>
+					</div>
+					</a>
+				</div>
+			</div>
+		{% endfor %}
+	</div>
+{% endif %}
 
 {% if form.errors %}
     {% for field in form %}
