--- a/mob_tracker/static/style.css
+++ b/mob_tracker/static/style.css
@@ -54,6 +54,11 @@ hr {
 /*  overflow-wrap: break-word;
   height: auto;*/
 }
+.search-btn-class {
+  width: 250px;
+  height: 50px;
+  font-size: 20px;
+}
 /*.search-input-container-class {
   min-width: 100px;
   max-width: 100px;
