--- a/mob_tracker/templates/index.html
+++ b/mob_tracker/templates/index.html
@@ -11,17 +11,20 @@
 	</div>
 	<div class="row">
 		<div class="input-field col s12 mt0 center-align">
-			<input class="btn" type="submit" value="Submit"></input>
+			<input class="btn search-btn-class" type="submit" value="Search"></input>
+			{% if query %}
+				<input class="btn search-btn-class" type="button" id="reset-search" value="Reset"></input>
+			{% endif %}
 		</div>
 	</div>
 </form>
 
 
-<h4 class="center-align mt100">Don't want to search?</h4>
+<!-- <h4 class="center-align mt100">Don't want to search?</h4> -->
 <div class="row">
 	<div class="input-field col s12 mt0 center-align">
 		<!-- Modal Trigger -->
-		<a class="waves-effect waves-light btn modal-trigger mb100" href="#modal">Create Entry</a>
+		<a class="waves-effect waves-light btn modal-trigger mb100" href="#modal">New Entry</a>
 	</div>
 </div>
 
@@ -62,6 +65,17 @@
 					<input class="modal-close waves-effect waves-green btn-flat modal-submit-class" type="submit" value="Create" data-modal=""></input>
 				</div>
 			</div>
+
+{% if query %}
+	<h4 class="center-align mt100">{% if not entries %}No {% endif %}Search results for:</h4>
+	<ul>
+		{% for keyword in query %}
+			<li>{{ keyword }}</li>
+		{% endfor %}
+	</ul>
+{% else %}
+	<h4 class="center-align mt100">All Entries:</h4>
+{% endif %}
 
 {% if entries %}
 	<div class="row">
