--- a/mob_tracker/templates/signup.html
+++ b/mob_tracker/templates/signup.html
@@ -1,11 +1,13 @@
 {% extends 'layout.html' %}
-
 {% block content %}
+
+<div class="container">
 <h1>Signup</h1>
 <form method="POST" action=".">
 	{% csrf_token %}
 	{{ form.as_p}}
 	<input class="btn" type="submit" value="Submit" />
 </form>
+</div>
 
 {% endblock %}
